--- a/src/App.css
+++ b/src/App.css
@@ -2,7 +2,7 @@ body,
 input,
 textarea,
 button {
-  font-family: Inter, sans-serif;
+  font-family: var(--general-font-family);
   font-size: 16px;
   font-weight: 400;
   line-height: 24px;
