--- a/src/App.css
+++ b/src/App.css
@@ -6,4 +6,9 @@ button {
   font-size: 16px;
   font-weight: 400;
   line-height: 24px;
+  margin: 0px;
+}
+
+.initial_load{
+  text-align: center;
 }
