--- a/src/components/FilterList/FilterList.module.css
+++ b/src/components/FilterList/FilterList.module.css
@@ -3,7 +3,7 @@
   display: flex;
   flex-direction: column;
   gap: 32px;
-  max-width: 370px;
+  width: 370px;
 }
 
 .filter_label {
@@ -19,6 +19,7 @@
 
 .filter_block {
   padding: 0px;
+  margin: 0px;
   display: flex;
   flex-wrap: wrap;
   row-gap: 8px;
