--- a/src/components/CamperList/CamperList.module.css
+++ b/src/components/CamperList/CamperList.module.css
@@ -1,7 +1,26 @@
-.camper_list{
-    list-style: none;
-    padding: 0px;
-    display: flex;
-    flex-direction: column;
-    row-gap: 32px;
+.camper_list {
+  list-style: none;
+  padding: 0px;
+  display: flex;
+  flex-direction: column;
+  row-gap: 32px;
+}
+
+.load_more {
+  outline: none;
+  width: 145px;
+  height: 56px;
+  border: 1px solid var(--color-7);
+  background-color: var(--color-10);
+  border-radius: 200px;
+  text-align: center;
+}
+
+.load_more:hover,
+.load_more:active {
+    border: 1px solid var(--color-5);
+}
+
+.button_container{
+    text-align: center;
 }
