--- a/src/components/FavoriteButton/FavoriteButton.module.css
+++ b/src/components/FavoriteButton/FavoriteButton.module.css
@@ -2,3 +2,16 @@
   width: 24px;
   height: 24px;
 }
+
+input[type="checkbox"].button_box {
+  position: absolute;
+  z-index: -1;
+  width: 0;
+  height: 0;
+  opacity: 0;
+}
+
+input[type="checkbox"].button_box + label {
+  width: 24px;
+  height: 24px;
+}
